--- a/Site.html
+++ b/Site.html
@@ -5,131 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Eco Wash & Park</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
-    }
-
-    header {
-      background-color: #000;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px;
-    }
-    
-
-    header img {
-      height: 40px;
-    }
-
-    nav a {
-      color: #fff;
-      margin-left: 20px;
-      text-decoration: none;
-      font-weight: bold;
-      border-bottom: 2px solid transparent;
-    }
-
-    nav a:hover, nav a.active {
-      border-bottom: 2px solid #0cc0df;
-    }
-
-    .overlay-text {
-      position: absolute;
-      top: 20%;
-      left: 5%;
-      max-width: 50%;
-    }
-
-    .overlay-text h1 {
-      font-size: 50px;
-      line-height: 1.1;
-      color: #00aaff;
-    }
-
-    .services {
-      padding: 40px 20px;
-      background-color: #111;
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-    }
-
-    .service-category {
-      flex: 1 1 200px;
-      margin: 20px;
-    }
-
-    .service-category h3 {
-      color: #0cc0df;
-    }
-
-    footer {
-      background-color: #000;
-      text-align: center;
-      padding: 20px;
-      color: #888;
-    }
-
-    
-     iframe {
-      width: 100%;
-      height: 400px;
-      border: none;
-      margin-top: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-     .contact-info {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      margin: 2rem 0;
-    }
-
-    .contact-info i {
-      margin-right: 0.5rem;
-      color: #4CAF50;
-    }
-
-    .services, .about, .contact {
-      text-align: center;
-    }
-
-
-    footer {
-      background-color: var(--azul-marinho);
-      color: var(--branco);
-      text-align: center;
-      padding: 2rem 1rem;
-      margin-top: 2rem;
-    }
-
-   .hero {
-      background: linear-gradient(135deg, #000000, #000000);
-      color: var(--branco);
-      text-align: center;
-      padding: 8rem 2rem;
-    }
-
-    .hero h1 {
-      font-size: 3.5rem;
-      margin-bottom: 1rem;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-    }
-
-    .hero p {
-      font-size: 1.5rem;
-      margin-bottom: 2rem;
-      text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
-    }
-
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -142,7 +18,6 @@
     <a href="#">Contato</a>
   </nav>
 </header>
-
 
 <div class="hero">
   <div class="overlay-text">
@@ -176,25 +51,22 @@
       <li>Limpeza Técnica</li>
     </ul>
   </div>
+</section>
 
-  <section class="contact" id="contato">
-    <h2>Fale Conosco</h2>
-    <div class="contact-info">
-      <p><i class="fas fa-phone" style="color: #0cc0df;"></i> (11) 99999-8888</p>
-      <p><i class="fas fa-envelope" style="color: #0cc0df;"></i> contato@lavaexpress.com.br</p>
-      <p><i class="fas fa-map-marker-alt" style="color: #0cc0df;"></i> Rua Thadeu José de Moraes, 19-1 - Vila Nova Urupes, Suzano - SP</p>
-    </div>
+<section class="contact" id="contato">
+  <h2>Fale Conosco</h2>
+  <div class="contact-info">
+    <p><i class="fas fa-phone" style="color: #0cc0df;"></i> (11) 99999-8888</p>
+    <p><i class="fas fa-envelope" style="color: #0cc0df;"></i> contato@lavaexpress.com.br</p>
+    <p><i class="fas fa-map-marker-alt" style="color: #0cc0df;"></i> Rua Thadeu José de Moraes, 19-1 - Vila Nova Urupes, Suzano - SP</p>
+  </div>
 
   <iframe 
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.544495342801!2d-46.3041031!3d-23.5483387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce70a06a0f081f%3A0xdcd1f5f4a8b4ae6f!2sRua%20Thadeu%20Jos%C3%A9%20de%20Moraes%2C%2019-1%20-%20Vila%20Nova%20Urupes%2C%20Suzano%20-%20SP%2C%2008615-350!5e0!3m2!1spt-BR!2sbr!4v1687982388456!5m2!1spt-BR!2sbr" 
-  width="100%" 
-  height="400" 
-  style="border:0; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" 
-  allowfullscreen="" 
-  loading="lazy" 
-  referrerpolicy="no-referrer-when-downgrade">
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.544495342801!2d-46.3041031!3d-23.5483387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce70a06a0f081f%3A0xdcd1f5f4a8b4ae6f!2sRua%20Thadeu%20Jos%C3%A9%20de%20Moraes%2C%2019-1%20-%20Vila%20Nova%20Urupes%2C%20Suzano%20-%20SP%2C%2008615-350!5e0!3m2!1spt-BR!2sbr!4v1687982388456!5m2!1spt-BR!2sbr" 
+    allowfullscreen="" 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
   </iframe>
-
 </section>
 
 <footer>
@@ -204,6 +76,3 @@
 
 </body>
 </html>
-
-
-
