feat: add corrosel

--- a/Site.html
+++ b/Site.html
@@ -7,6 +7,37 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
+
+<script>
+  const slides = document.querySelectorAll('.carousel-slide');
+  const prevBtn = document.querySelector('.carousel-btn.prev');
+  const nextBtn = document.querySelector('.carousel-btn.next');
+  let currentIndex = 0;
+
+  function showSlide(index) {
+    slides.forEach((slide, i) => {
+      slide.classList.remove('active');
+      if (i === index) slide.classList.add('active');
+    });
+  }
+
+  function nextSlide() {
+    currentIndex = (currentIndex + 1) % slides.length;
+    showSlide(currentIndex);
+  }
+
+  function prevSlide() {
+    currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+    showSlide(currentIndex);
+  }
+
+  nextBtn.addEventListener('click', nextSlide);
+  prevBtn.addEventListener('click', prevSlide);
+
+  // auto slide
+  setInterval(nextSlide, 5000); // muda a cada 5s
+</script>
+
 <body>
 
 <header style="height: 80px; display: flex; align-items: center; background-color: #000; padding: 30px;">
@@ -19,11 +50,18 @@
   </nav>
 </header>
 
-<div class="hero">
-  <div class="overlay-text">
-    <h1>ESTÉTICA<br>AUTOMOTIVA</h1>
+<div class="hero-carousel">
+  <div class="carousel-container">
+    <img src="images/img-carrossel (1).jpg" class="carousel-slide active" alt="Imagem 1">
+    <img src="images/img-carrossel (2).jpg" class="carousel-slide" alt="Imagem 2">
+    <img src="images/img-carrossel (3).jpg" class="carousel-slide" alt="Imagem 3">
+    
+    <button class="carousel-btn prev">&#10094;</button>
+    <button class="carousel-btn next">&#10095;</button>
   </div>
 </div>
+
+
 
 <section class="services">
   <div class="service-category">
