--- a/Site.html
+++ b/Site.html
@@ -30,31 +30,85 @@
   </div>
 </div>
 
-<section class="services">
-  <div class="service-category">
-    <h3>FARÓIS</h3>
-    <ul>
-      <li>Polimento</li>
-      <li>Vitrificação</li>
-    </ul>
+<section class="servicos" id="servicos">
+  <h2 class="servicos-titulo">Serviços</h2>
+
+  <div class="categoria-servico">
+    <h3>Faróis</h3>
+    <div class="servicos-grid">
+      <div class="card-servico">
+        <img src="images/farois-polimento.jpg" alt="Polimento de Faróis">
+        <h4>Polimento</h4>
+        <p>Devolve a transparência dos faróis, melhorando a visibilidade e a estética.</p>
+        <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Polimento de Faróis." target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/farois-vitrificacao.jpg" alt="Vitrificação de Faróis">
+        <h4>Vitrificação</h4>
+        <p>Protege os faróis contra amarelamento e riscos por mais tempo.</p>
+        <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Vitrificação de Faróis." target="_blank">Agendar Serviço</a>
+      </div>
+    </div>
   </div>
-  <div class="service-category">
-    <h3>ESTÉTICA</h3>
-    <ul>
-      <li>Lavagem Ecológica</li>
-      <li>Polimento</li>
-      <li>Enceramento</li>
-      <li>Descontaminação</li>
-      <li>Cristalização</li>
-      <li>Vitrificação</li>
-      <li>Espelhamento (cera)</li>
-    </ul>
+
+  <div class="categoria-servico">
+    <h3>Estética</h3>
+    <div class="servicos-grid">
+      <div class="card-servico">
+        <img src="images/lavagem-eco.jpg" alt="Lavagem Ecológica">
+        <h4>Lavagem Ecológica</h4>
+        <p>Limpeza completa sem uso excessivo de água, preservando o meio ambiente.</p>
+        <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Lavagem Ecológica." target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/polimento.jpg" alt="Polimento">
+        <h4>Polimento</h4>
+        <p>Remove riscos superficiais e marcas, restaurando o brilho da pintura.</p>
+        <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Polimento." target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/enceramento.jpg" alt="Enceramento">
+        <h4>Enceramento</h4>
+        <p>Cria uma camada protetora que realça o brilho da pintura por semanas.</p>
+        <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Enceramento." target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/descontaminacao.jpg" alt="Descontaminação">
+        <h4>Descontaminação</h4>
+        <p>Remove impurezas incrustadas na pintura, preparando a lataria para proteção.</p>
+        <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Descontaminação." target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/cristalizacao.jpg" alt="Cristalização">
+        <h4>Cristalização</h4>
+        <p>Cria uma camada cristalina que protege e intensifica o brilho da pintura.</p>
+        <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Cristalização." target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/vitrificacao.jpg" alt="Vitrificação">
+        <h4>Vitrificação</h4>
+        <p>Proteção cerâmica de longa duração, ideal para carros expostos ao tempo.</p>
+        <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Vitrificação." target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/espelhamento.jpg" alt="Espelhamento (Cera)">
+        <h4>Espelhamento (Cera)</h4>
+        <p>Deixa a pintura com efeito espelhado e alto brilho.</p>
+        <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Espelhamento (Cera)." target="_blank">Agendar Serviço</a>
+      </div>
+    </div>
   </div>
-  <div class="service-category">
-    <h3>MOTOR</h3>
-    <ul>
-      <li>Limpeza Técnica</li>
-    </ul>
+
+  <div class="categoria-servico">
+    <h3>Motor</h3>
+    <div class="servicos-grid">
+      <div class="card-servico">
+        <img src="images/limpeza-motor.jpg" alt="Limpeza Técnica de Motor">
+        <h4>Limpeza Técnica</h4>
+        <p>Remoção segura de sujeiras no motor, com produtos adequados e sem riscos.</p>
+        <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Limpeza Técnica de Motor." target="_blank">Agendar Serviço</a>
+      </div>
+    </div>
   </div>
 </section>
 
