--- a/Site.html
+++ b/Site.html
@@ -130,7 +130,7 @@
 
 <footer>
   <p>| Profissionais qualificados | Serviços agendados | Ecológico e seguro |</p>
-  <p>&copy; 2025 Lava Rápido & Estacionamento - Todos os direitos reservados</p>
+  <p>&copy; 2025 Estética automotiva & Estacionamento - Todos os direitos reservados.</p>
 </footer>
 
 <script src="script.js"></script>
