--- a/Site.html
+++ b/Site.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="Logo Eco Wash">
+    <img src="images/logo.png" alt="Logo Eco Wash">
     <nav>
       <a href="#" class="active">Home</a>
       <a href="#">Sobre</a>
@@ -52,7 +52,8 @@
 
         Porque um cachorro pode não viver para sempre,
         mas ele ama como se fosse.</p>
-
+    </div>
+  </section>
       <section class="servicos" id="servicos">
         <h2 class="servicos-titulo">Serviços</h2>
 
@@ -60,115 +61,111 @@
           <h3>Lavagem</h3>
           <div class="servicos-grid">
             <div class="card-servico">
-              <img src="images/lavagem-simples.jpg" alt="Lavagem simples">
-              <h4>Lavagem</h4>
+              <img src="images/servicos/lavagem-simples.png" alt="Lavagem simples">
+              <h4>Lavagem Simples</h4>
               <p>Ideal para o dia a dia, a lavagem simples remove sujeiras externas e garante um visual limpo em poucos
                 minutos.</p>
               <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Lavagem simples."
                 target="_blank">Agendar Serviço</a>
             </div>
-            <div class="categoria-servico">
-              <div class="card-servico">
-                <img src="images/lavagem-completa.jpg" alt="Lavagem completa">
-                <h4>Lavagem</h4>
-                <p>Seu carro limpo por dentro e por fora com cuidado profissional. A lavagem completa cuida de todos os
-                  detalhes.</p>
-                <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Lavagem completa."
-                  target="_blank">Agendar Serviço</a>
-              </div>
-              <div class="categoria-servico">
-                <div class="card-servico">
-                  <img src="" alt="Lavagem a seco">
-                  <h4>Lavagem</h4>
-                  <p>Produtos específicos para remover sujeira e detritos sem a necessidade de água.</p>
-                  <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Lavagem a seco."
-                    target="_blank">Agendar Serviço</a>
-                </div>
-              </div>
-
+            <div class="card-servico">
+              <img src="images/servicos/lavagem-simples.png" alt="Lavagem completa">
+              <h4>Lavagem Completa</h4>
+              <p>Seu carro limpo por dentro e por fora com cuidado profissional. A lavagem completa cuida de todos os
+                detalhes.</p>
+              <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Lavagem completa."
+                target="_blank">Agendar Serviço</a>
+            </div>
+            <div class="card-servico">
+              <img src="images/servicos/lavagem-simples.png" alt="Lavagem a seco">
+              <h4>Lavagem a Seco</h4>
+              <p>Produtos específicos para remover sujeira e detritos sem a necessidade de água.</p>
+              <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Lavagem a seco."
+                target="_blank">Agendar Serviço</a>
             </div>
           </div>
+        </div>
 
-          <div class="categoria-servico">
-            <h3>Faróis</h3>
-            <div class="servicos-grid">
-              <div class="card-servico">
-                <img src="images/farois-polimento.jpg" alt="Polimento de Faróis">
-                <h4>Polimento</h4>
-                <p>Devolve a transparência dos faróis, melhorando a visibilidade e a estética.</p>
-                <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Polimento de Faróis."
-                  target="_blank">Agendar Serviço</a>
-              </div>
-              <div class="card-servico">
-                <img src="images/farois-vitrificacao.jpg" alt="Vitrificação de Faróis">
-                <h4>Vitrificação</h4>
-                <p>Protege os faróis contra amarelamento e riscos por mais tempo.</p>
-                <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Vitrificação de Faróis."
-                  target="_blank">Agendar Serviço</a>
-              </div>
+        <div class="categoria-servico">
+          <h3>Faróis</h3>
+          <div class="servicos-grid">
+            <div class="card-servico">
+              <img src="images/servicos/farois-vitrificacao.png" alt="Polimento de Faróis">
+              <h4>Polimento</h4>
+              <p>Devolve a transparência dos faróis, melhorando a visibilidade e a estética.</p>
+              <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Polimento de Faróis."
+                target="_blank">Agendar Serviço</a>
+            </div>
+            <div class="card-servico">
+              <img src="images/servicos/farois-vitrificacao.png" alt="Vitrificação de Faróis">
+              <h4>Vitrificação</h4>
+              <p>Protege os faróis contra amarelamento e riscos por mais tempo.</p>
+              <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Vitrificação de Faróis."
+                target="_blank">Agendar Serviço</a>
             </div>
           </div>
+        </div>
 
-          <div class="categoria-servico">
-            <h3>Estética</h3>
-            <div class="servicos-grid">
-              <div class="card-servico">
-                <img src="images/polimento.jpg" alt="Polimento">
-                <h4>Polimento</h4>
-                <p>Remove riscos superficiais e marcas, restaurando o brilho da pintura.</p>
-                <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Polimento."
-                  target="_blank">Agendar Serviço</a>
-              </div>
-              <div class="card-servico">
-                <img src="images/enceramento.jpg" alt="Enceramento">
-                <h4>Enceramento</h4>
-                <p>Cria uma camada protetora que realça o brilho da pintura por semanas.</p>
-                <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Enceramento."
-                  target="_blank">Agendar Serviço</a>
-              </div>
-              <div class="card-servico">
-                <img src="images/descontaminacao.jpg" alt="Descontaminação">
-                <h4>Descontaminação</h4>
-                <p>Remove impurezas incrustadas na pintura, preparando a lataria para proteção.</p>
-                <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Descontaminação."
-                  target="_blank">Agendar Serviço</a>
-              </div>
-              <div class="card-servico">
-                <img src="images/cristalizacao.jpg" alt="Cristalização">
-                <h4>Cristalização</h4>
-                <p>Cria uma camada cristalina que protege e intensifica o brilho da pintura.</p>
-                <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Cristalização."
-                  target="_blank">Agendar Serviço</a>
-              </div>
-              <div class="card-servico">
-                <img src="images/espelhamento.jpg" alt="Espelhamento (Cera)">
-                <h4>Espelhamento (Cera)</h4>
-                <p>Deixa a pintura com efeito espelhado e alto brilho.</p>
-                <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Espelhamento (Cera)."
-                  target="_blank">Agendar Serviço</a>
-              </div>
-              <div class="card-servico">
-                <img src="images/limpeza com pincel.jpg" alt="Limpeza de cantos e acabamentos com pincel">
-                <h4>Limpeza de cantos e acabamentos com pincel</h4>
-                <p>Remoção precisa de sujeiras em frestas, botões e acabamentos usando pincéis especiais, garantindo acabamento limpo e detalhado..</p>
-                <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Limpeza de cantos e acabamentos com pincel."
-                  target="_blank">Agendar Serviço</a>
-              </div>
+        <div class="categoria-servico">
+          <h3>Estética</h3>
+          <div class="servicos-grid">
+            <div class="card-servico">
+              <img src="images/polimento.jpg" alt="Polimento">
+              <h4>Polimento</h4>
+              <p>Remove riscos superficiais e marcas, restaurando o brilho da pintura.</p>
+              <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Polimento."
+                target="_blank">Agendar Serviço</a>
+            </div>
+            <div class="card-servico">
+              <img src="images/enceramento.jpg" alt="Enceramento">
+              <h4>Enceramento</h4>
+              <p>Cria uma camada protetora que realça o brilho da pintura por semanas.</p>
+              <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Enceramento."
+                target="_blank">Agendar Serviço</a>
+            </div>
+            <div class="card-servico">
+              <img src="images/descontaminacao.jpg" alt="Descontaminação">
+              <h4>Descontaminação</h4>
+              <p>Remove impurezas incrustadas na pintura, preparando a lataria para proteção.</p>
+              <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Descontaminação."
+                target="_blank">Agendar Serviço</a>
+            </div>
+            <div class="card-servico">
+              <img src="images/cristalizacao.jpg" alt="Cristalização">
+              <h4>Cristalização</h4>
+              <p>Cria uma camada cristalina que protege e intensifica o brilho da pintura.</p>
+              <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Cristalização."
+                target="_blank">Agendar Serviço</a>
+            </div>
+            <div class="card-servico">
+              <img src="images/espelhamento.jpg" alt="Espelhamento (Cera)">
+              <h4>Espelhamento (Cera)</h4>
+              <p>Deixa a pintura com efeito espelhado e alto brilho.</p>
+              <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Espelhamento (Cera)."
+                target="_blank">Agendar Serviço</a>
+            </div>
+            <div class="card-servico">
+              <img src="images/limpeza com pincel.jpg" alt="Limpeza de cantos e acabamentos com pincel">
+              <h4>Limpeza de cantos e acabamentos com pincel</h4>
+              <p>Remoção precisa de sujeiras em frestas, botões e acabamentos usando pincéis especiais, garantindo acabamento limpo e detalhado..</p>
+              <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Limpeza de cantos e acabamentos com pincel."
+                target="_blank">Agendar Serviço</a>
             </div>
           </div>
+        </div>
 
-          <div class="categoria-servico">
-            <h3>Motor</h3>
-            <div class="servicos-grid">
-              <div class="card-servico">
-                <img src="images/limpeza-motor.jpg" alt="Limpeza Técnica de Motor">
-                <h4>Limpeza Técnica</h4>
-                <p>Remoção segura de sujeiras no motor, com produtos adequados e sem riscos.</p>
-                <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Limpeza Técnica de Motor."
-                  target="_blank">Agendar Serviço</a>
-              </div>
+        <div class="categoria-servico">
+          <h3>Motor</h3>
+          <div class="servicos-grid">
+            <div class="card-servico">
+              <img src="images/limpeza-motor.jpg" alt="Limpeza Técnica de Motor">
+              <h4>Limpeza Técnica</h4>
+              <p>Remoção segura de sujeiras no motor, com produtos adequados e sem riscos.</p>
+              <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Limpeza Técnica de Motor."
+                target="_blank">Agendar Serviço</a>
             </div>
           </div>
+        </div>
       </section>
 
       <section class="contact" id="contato">
