--- a/Site.html
+++ b/Site.html
@@ -11,7 +11,7 @@
 <body id="home">
 
   <header>
-    <img src="images/logo.png" alt="Logo Eco Wash">
+    <img src="images/logo2.jpeg" alt="Logo Eco Wash">
     <nav>
       <a href="#home" class="active">Home</a>
       <a href="#Sobre">Sobre</a>
@@ -135,13 +135,13 @@
 <section class="contact" id="contato">
   <h2>Fale Conosco</h2>
   <div class="contact-info">
-    <p><i class="fas fa-phone"></i> (11) 99999-8888</p>
-    <p><i class="fas fa-envelope"></i> contato@lavaexpress.com.br</p>
-    <p><i class="fas fa-map-marker-alt"></i> Rua Thadeu José de Moraes, 19-1 - Vila Nova Urupes, Suzano - SP</p>
+    <div class="contact-adress">
+      <p><i class="fas fa-phone"></i> (11) 99999-8888</p>
+      <p><i class="fas fa-envelope"></i> contato@lavaexpress.com.br</p>
+      <p><i class="fas fa-map-marker-alt"></i> Rua Thadeu José de Moraes, 19-1 - Vila Nova Urupes, Suzano - SP</p>
+    </div>
     <p>
       <a href="https://www.instagram.com/sua_empresa" target="_blank"><i class="fab fa-instagram"></i></a>
-      <br>
-      <a href="https://www.facebook.com/sua_empresa" target="_blank"><i class="fab fa-facebook"></i></a>
       <br>
       <a href="https://wa.me/5511999998888" target="_blank"><i class="fab fa-whatsapp"></i></a>
     </p>
