--- a/Site.html
+++ b/Site.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eco Wash & Park</title>
-  <link rel="icon" href="images/logo.png" type="images/png">
+  <link rel="icon" href="images/favicon.ico.png" type="image">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +16,8 @@
       <a href="#home" class="active">Home</a>
       <a href="#Sobre">Sobre</a>
       <a href="#servicos">Serviços</a>
-      <a href="#contato">Contato</a>
+      <a href="#quem-somos">Quem somos</a>
+      <a href="#contato">Contatos</a>
     </nav>
 
   </header>
@@ -28,7 +29,7 @@
       " type="video/mp4">
         Seu navegador não suporta vídeo.
       </video>
-      </div>
+    </div>
   </div>
 
 
@@ -53,105 +54,154 @@
       </div>
 
       <div class="sobre-imagem">
-        <img src="images/logo-removebg-preview.png" alt="Imagem de serviço">
+        <img src="images/logo2-removebg-preview.png" alt="Imagem de serviço">
       </div>
     </div>
   </section>
 
-<section class="servicos" id="servicos">
-  <h2 class="servicos-titulo">Serviços</h2>
+  <section class="servicos" id="servicos">
+    <h2 class="servicos-titulo">Serviços</h2>
 
-  <div class="servicos-grid">
-    <div class="card-servico">
-      <img src="images/servicos/lavagem-simples.png" alt="Lavagem simples">
-      <h4>Lavagem Simples</h4>
-      <p>Ideal para o dia a dia, a lavagem simples remove sujeiras externas e garante um visual limpo em poucos minutos.</p>
-      <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Lavagem simples." target="_blank">Agendar Serviço</a>
+    <div class="servicos-grid">
+      <div class="card-servico">
+        <img src="images/servicos/lavagem-simples.png" alt="Lavagem simples">
+        <h4>Lavagem Simples</h4>
+        <p>Ideal para o dia a dia, a lavagem simples remove sujeiras externas e garante um visual limpo em poucos
+          minutos.</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço de Lavagem simples."
+          target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/servicos/lavagem-completa.png" alt="Lavagem completa">
+        <h4>Lavagem Completa</h4>
+        <p>Seu carro limpo por dentro e por fora com cuidado profissional. A lavagem completa cuida de todos os
+          detalhes.</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço de Lavagem completa."
+          target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/servicos/lavagem-a-seco.png" alt="Lavagem a seco">
+        <h4>Lavagem a Seco</h4>
+        <p>Produtos específicos para remover sujeira e detritos sem a necessidade de água.</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço de Lavagem a seco."
+          target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/servicos/polimento.png" alt="Polimento de Faróis">
+        <h4>Polimento</h4>
+        <p>Devolve a transparência dos faróis, melhorando a visibilidade e a estética.</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço de Polimento de Faróis."
+          target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/servicos/vitrificação.png" alt="Vitrificação de Faróis">
+        <h4>Vitrificação</h4>
+        <p>Protege os faróis contra amarelamento e riscos por mais tempo.</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço de Vitrificação de Faróis."
+          target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/servicos/polimento-carro.png" alt="Polimento">
+        <h4>Polimento</h4>
+        <p>Remove riscos superficiais e marcas, restaurando o brilho da pintura.</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço de Polimento." target="_blank">Agendar
+          Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/servicos/enceramento.png" alt="Enceramento">
+        <h4>Enceramento</h4>
+        <p>Cria uma camada protetora que realça o brilho da pintura por semanas.</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço de Enceramento." target="_blank">Agendar
+          Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/servicos/descontaminacao-pintura.png" alt="Descontaminação de pintura">
+        <h4>Descontaminação de pintura</h4>
+        <p>Remove impurezas incrustadas na pintura, preparando a lataria para proteção.</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço de Descontaminação de pintura."
+          target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/servicos/cristalização.png" alt="Cristalização">
+        <h4>Cristalização</h4>
+        <p>Cria uma camada cristalina que protege e intensifica o brilho da pintura.</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço de Cristalização."
+          target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/servicos/limpeza-com-pincel.png" alt="Limpeza de cantos e acabamentos com pincel">
+        <h4>Limpeza de cantos e acabamentos com pincel</h4>
+        <p>Remoção precisa de sujeiras em frestas, botões e acabamentos usando pincéis especiais, garantindo acabamento
+          limpo e detalhado.</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço de Limpeza de cantos e acabamentos com pincel."
+          target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/servicos/motor.png" alt="Limpeza Técnica de Motor">
+        <h4>Limpeza Técnica</h4>
+        <p>Remoção segura de sujeiras no motor, com produtos adequados e sem riscos.</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço de Limpeza Técnica de Motor."
+          target="_blank">Agendar Serviço</a>
+      </div>
+      <div class="card-servico">
+        <img src="images/servicos/pacote-combo.png" alt="Lava e estaciona - Pacote Combo">
+        <h4>Lava e estaciona - Pacote combo</h4>
+        <p>Pacote onde o cliente estaciona e já inclui limpeza básica no período mínimo estacionado (4 horas).</p>
+        <a href="https://wa.me/5511967767525?text=Olá! Quero agendar o serviço do pacote combo, lava e estaciona."
+          target="_blank">Agendar Serviço</a>
+      </div>
     </div>
-    <div class="card-servico">
-      <img src="images/servicos/lavagem-completa.png" alt="Lavagem completa">
-      <h4>Lavagem Completa</h4>
-      <p>Seu carro limpo por dentro e por fora com cuidado profissional. A lavagem completa cuida de todos os detalhes.</p>
-      <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Lavagem completa." target="_blank">Agendar Serviço</a>
-    </div>
-    <div class="card-servico">
-      <img src="images/servicos/lavagem-a-seco.png" alt="Lavagem a seco">
-      <h4>Lavagem a Seco</h4>
-      <p>Produtos específicos para remover sujeira e detritos sem a necessidade de água.</p>
-      <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Lavagem a seco." target="_blank">Agendar Serviço</a>
-    </div>
-    <div class="card-servico">
-      <img src="images/servicos/polimento.png" alt="Polimento de Faróis">
-      <h4>Polimento</h4>
-      <p>Devolve a transparência dos faróis, melhorando a visibilidade e a estética.</p>
-      <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Polimento de Faróis." target="_blank">Agendar Serviço</a>
-    </div>
-    <div class="card-servico">
-      <img src="images/servicos/vitrificação.png" alt="Vitrificação de Faróis">
-      <h4>Vitrificação</h4>
-      <p>Protege os faróis contra amarelamento e riscos por mais tempo.</p>
-      <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Vitrificação de Faróis." target="_blank">Agendar Serviço</a>
-    </div>
-    <div class="card-servico">
-      <img src="images/servicos/polimento-carro.png" alt="Polimento">
-      <h4>Polimento</h4>
-      <p>Remove riscos superficiais e marcas, restaurando o brilho da pintura.</p>
-      <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Polimento." target="_blank">Agendar Serviço</a>
-    </div>
-    <div class="card-servico">
-      <img src="images/servicos/enceramento.png" alt="Enceramento">
-      <h4>Enceramento</h4>
-      <p>Cria uma camada protetora que realça o brilho da pintura por semanas.</p>
-      <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Enceramento." target="_blank">Agendar Serviço</a>
-    </div>
-    <div class="card-servico">
-      <img src="images/servicos/descontaminacao-pintura.png" alt="Descontaminação de pintura">
-      <h4>Descontaminação de pintura</h4>
-      <p>Remove impurezas incrustadas na pintura, preparando a lataria para proteção.</p>
-      <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Descontaminação de pintura." target="_blank">Agendar Serviço</a>
-    </div>
-    <div class="card-servico">
-      <img src="images/servicos/cristalização.png" alt="Cristalização">
-      <h4>Cristalização</h4>
-      <p>Cria uma camada cristalina que protege e intensifica o brilho da pintura.</p>
-      <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Cristalização." target="_blank">Agendar Serviço</a>
-    </div>
-    <div class="card-servico">
-      <img src="images/servicos/limpeza-com-pincel.png" alt="Limpeza de cantos e acabamentos com pincel">
-      <h4>Limpeza de cantos e acabamentos com pincel</h4>
-      <p>Remoção precisa de sujeiras em frestas, botões e acabamentos usando pincéis especiais, garantindo acabamento limpo e detalhado.</p>
-      <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Limpeza de cantos e acabamentos com pincel." target="_blank">Agendar Serviço</a>
-    </div>
-    <div class="card-servico">
-      <img src="images/servicos/motor.png" alt="Limpeza Técnica de Motor">
-      <h4>Limpeza Técnica</h4>
-      <p>Remoção segura de sujeiras no motor, com produtos adequados e sem riscos.</p>
-      <a href="https://wa.me/5511999998888?text=Olá! Quero agendar o serviço de Limpeza Técnica de Motor." target="_blank">Agendar Serviço</a>
-    </div>
-  </div>
-</section>
+  </section>
 
+  <section class="quem-somos" id="quem-somos">
+    <h2>Quem Somos</h2>
+    <div class="quem-somos-conteudo">
+      <div class="socio">
+        <img src="images/sócios/naomi.jpeg" alt="Foto Sócio 1">
+        <h4>Naomi Horiuchi</h4>
+        <p>Apaixonada por animais e viagens, Naomi Horiuchi é especialista em atendimento ao cliente e estudante de
+          Ciência da Computação, atuando também como desenvolvedora Front-End.
 
-<section class="contact" id="contato">
-  <h2>Fale Conosco</h2>
-  <div class="contact-info">
-    <div class="contact-adress">
-      <p><i class="fas fa-phone"></i> (11) 99999-8888</p>
-      <p><i class="fas fa-envelope"></i> contato@lavaexpress.com.br</p>
-      <p><i class="fas fa-map-marker-alt"></i> Rua Thadeu José de Moraes, 19-1 - Vila Nova Urupes, Suzano - SP</p>
+          No Eco Wash & Park, Naomi é a sócia propritária e alma acolhedora que cuida para que cada cliente tenha uma
+          experiência única e
+          agradável. Com olhar atento aos detalhes, acredita que excelência vai além do serviço: está em cada gesto, no
+          ambiente acolhedor e no cuidado em superar as expectativas de quem nos visita.</p>
+      </div>
+      <div class="socio">
+        <img src="images/sócios/marcos.jpeg" alt="Foto Sócio 2">
+        <h4>Marcos Alcantara</h4>
+        <p>Servidor público, casado e pai de dois filhos, Marcos Alcantara é graduado em Matemática e pós-graduado em
+          Gestão Pública.
+
+          No Eco Wash & Park, Marcos traz sua experiência em gestão e organização para garantir que todos os processos
+          funcionem com eficiência e qualidade. Com um olhar atento para o bem-estar das pessoas e a sustentabilidade,
+          ele trabalha para que cada cliente se sinta valorizado e satisfeito, contribuindo para um ambiente acolhedor e
+          responsável.</p>
+      </div>
     </div>
-    <p>
-      <a href="https://www.instagram.com/sua_empresa" target="_blank"><i class="fab fa-instagram"></i></a>
-      <br>
-      <a href="https://wa.me/5511999998888" target="_blank"><i class="fab fa-whatsapp"></i></a>
-    </p>
-  </div>
+  </section>
 
-  <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.544495342801!2d-46.3041031!3d-23.5483387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce70a06a0f081f%3A0xdcd1f5f4a8b4ae6f!2sRua%20Thadeu%20Jos%C3%A9%20de%20Moraes%2C%2019-1%20-%20Vila%20Nova%20Urupes%2C%20Suzano%20-%20SP%2C%2008615-350!5e0!3m2!1spt-BR!2sbr!4v1687982388456!5m2!1spt-BR!2sbr"
-    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-  </iframe>
-</section>
+  <section class="contact" id="contato">
+    <h2>Fale Conosco</h2>
+    <div class="contact-info">
+      <div class="contact-adress">
+        <p><i class="fas fa-phone"></i> (11) 96776-7525</p>
+        <p><i class="fas fa-envelope"></i> ecowasheparksuzano@gmail.com</p>
+        <p><i class="fas fa-map-marker-alt"></i> Rua Thadeu José de Moraes, 19-1 - Vila Nova Urupes, Suzano - SP</p>
+      </div>
+      <p>
+        <a href="https://www.instagram.com/ecowashepark/profilecard/?igsh=MThrcjhwa3A3OHBzYw==" target="_blank"><i
+            class="fab fa-instagram"></i></a>
+        <br>
+        <a href="https://wa.me/5511967767525" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      </p>
+    </div>
+
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.544495342801!2d-46.3041031!3d-23.5483387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce70a06a0f081f%3A0xdcd1f5f4a8b4ae6f!2sRua%20Thadeu%20Jos%C3%A9%20de%20Moraes%2C%2019-1%20-%20Vila%20Nova%20Urupes%2C%20Suzano%20-%20SP%2C%2008615-350!5e0!3m2!1spt-BR!2sbr!4v1687982388456!5m2!1spt-BR!2sbr"
+      allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </section>
 
 
   <footer>
